# tasks

./: .gitignore  LICENSE  README.md  biome.json  index.html  package.json  tsconfig.node.json  vitest.config.ts
e2e/pilot/: smoke.sh
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfigView.test.tsx  ConfigView.tsx  StickerView.test.tsx  StickerView.tsx
src/components/ui/: button.test.tsx  button.tsx  checkbox.tsx
src/hooks/: useDailyTask.ts
src/lib/: date.test.ts  date.ts  tauri.ts  utils.test.ts
src/test/: render.tsx  setup.ts  tauriMock.ts
